# 7zip-rs

./: Cargo.toml  README.md  build.rs  devenv.nix
examples/: example.7z  extract.rs
src/: lib.rs
