[package]
name = "seven-zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
tempfile = "3.4.0"
walkdir = "2.3.3"

[build-dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
